--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-node_modules
 # Keep environment variables out of version control
 .env
-./node_modules
+/node_modules
+/test
+dist
+test
+manual-test.http
