--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc",
+    "start": "node dist/main.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/main.ts"
   },
   "jest": {
     "preset": "ts-jest",
@@ -18,6 +21,7 @@
     "@prisma/client": "^5.10.2",
     "bcrypt": "^5.1.1",
     "express": "^4.18.3",
+    "uuid": "^9.0.1",
     "winston": "^3.11.0",
     "zod": "^3.22.4"
   },
@@ -29,11 +33,13 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/supertest": "^6.0.2",
+    "@types/uuid": "^9.0.8",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "prisma": "^5.10.2",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   }
 }
